# Configure Examples

message(STATUS "### Configuring Examples...")

# Add all bins/libs
add_subdirectory(ExampleCachedProvider)
add_subdirectory(ExampleConsumer)
add_subdirectory(ExampleConsumer4SoftICEStreaming)
add_subdirectory(ExampleProject)
add_subdirectory(ExampleProvider)
add_subdirectory(MDIBVisualizer)
add_subdirectory(AbstractConsumerSimulator)
add_subdirectory(PulseOximeterProvider)

